--- a/install
+++ b/install
@@ -6,6 +6,6 @@ sudo apt install ansible
 # Plugin to stow in ansible
 curl -o stow https://raw.githubusercontent.com/caian-org/ansible-stow/v0.1.4/stow
 sudo mkdir -p /usr/share/ansible/plugins/modules/
-mv stow /usr/share/ansible/plugins/modules/
+sudo mv stow /usr/share/ansible/plugins/modules/
 
 sudo ansible-pull -U https://github.com/juanjozg/ansible.git
