--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
-sudo apt install software-properties-common
+sudo apt install software-properties-common --yes
 sudo apt-add-repository --yes --update ppa:ansible/ansible
-sudo apt install ansible
+sudo apt install ansible --yes
 
 # Plugin to stow in ansible
 curl -o stow https://raw.githubusercontent.com/caian-org/ansible-stow/v0.1.4/stow
